# milo

./: README.md
c++/: CMakeLists.txt
c++/examples/: CMakeLists.txt
c++/examples/test_joystick/: main.cpp
c++/examples/test_sm/: main.cpp
c++/examples/test_task/: main.cpp
c++/examples/test_tello/: main.cpp
c++/include/milo/: milo.h  milo.hpp
c++/include/milo/driver/: TelloCamera.h  TelloCommand.h  TelloTelemetry.h
c++/include/milo/driver/joy/: JoystickBackend.h
c++/include/milo/driver/sockets/: CameraSocket.h  CommandSocket.h  StateSocket.h  TelloSocket.h  h264decoder.hpp
c++/include/milo/modules/camera/: TelloCamera.h  TelloCamera.hpp
c++/include/milo/modules/camera/decoder/: h264decoder.hpp
c++/include/milo/modules/camera/driver/: CameraSocket.h  CameraSocket.hpp
c++/include/milo/modules/command/: TelloCommand.h  TelloCommand.hpp
c++/include/milo/modules/command/driver/: CommandSocket.h  CommandSocket.hpp
c++/include/milo/modules/joystick/: JoystickBackend.h  JoystickBackend.hpp
c++/include/milo/modules/logger/: LogManager.hpp
c++/include/milo/modules/socket/: TelloSocket.h  TelloSocket.hpp
c++/include/milo/modules/telemetry/: TelloTelemetry.h  TelloTelemetry.hpp
c++/include/milo/modules/telemetry/driver/: StateSocket.h  StateSocket.hpp
c++/include/milo/modules/utils/: conversions.hpp  state.hpp  task.hpp
c++/src/: milo.cpp
c++/src/driver/: TelloCamera.cpp  TelloCommand.cpp  TelloTelemetry.cpp
c++/src/driver/joy/: JoystickBackend.cpp
c++/src/driver/sockets/: CameraSocket.cpp  CommandSocket.cpp  StateSocket.cpp  TelloSocket.cpp  h264decoder.cpp
c++/src/modules/camera/: TelloCamera.cpp
c++/src/modules/camera/decoder/: h264decoder.cpp
c++/src/modules/camera/driver/: CameraSocket.cpp
c++/src/modules/command/: TelloCommand.cpp
c++/src/modules/command/driver/: CommandSocket.cpp
c++/src/modules/joystick/: JoystickBackend.cpp
c++/src/modules/logger/: LogManager.cpp
c++/src/modules/socket/: TelloSocket.cpp
c++/src/modules/telemetry/: TelloTelemetry.cpp
c++/src/modules/telemetry/driver/: StateSocket.cpp
c++/src/modules/utils/: task.cpp
python/: setup.py
python/milo/: core.py
python/milo/driver/: tello_camera.py  tello_commands.py  tello_telemetry.py
ros/: CMakeLists.txt  package.xml
ros/examples/: CMakeLists.txt  package.xml
ros/examples/milo_control/: main.cpp
ros/examples/test_ros_tello/: main.cpp
ros/include/: milo_node.h  milo_node.hpp
ros/src/: main.cpp  milo_node.cpp
scripts/: install_dependencies.sh
